be/src/common/status.h
@@ -252,6 +252,9 @@ class Status {
   // A non-inline function for freeing status' message.
   void FreeMessage() noexcept;
 
+  /// A non-inline function for unwrapping a TStatus object.
+  void FromThrift(const TStatus& status);
+
   /// Status uses a naked pointer to ensure the size of an instance on the stack is only
   /// the sizeof(ErrorMsg*). Every Status owns its ErrorMsg instance.
   ErrorMsg* msg_;
